disable directbuffer usage for travis-ci testing